# OCR-LLM-Extractor

receipt-ocr-main/: README.md  pyproject.toml
receipt-ocr-main/output/: sample_1.json  sample_7.json
receipt-ocr-main/src/receipt_ocr/: cli.py  parsers.py  providers.py  utils.py
receipt-ocr-main/src/tesseract_ocr/: Dockerfile  app.py  main.py  utils.py
