[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "OCR-Extractor"
description = "A package for extracting structured data from receipts."
readme = "README.md"
keywords = [ "llm", "ocr", "receipts", "tesseract" ]
license = { file = "LICENSE" }
authors = [ { name = "Karan", email = "karankumarsinghkhg12@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [ "version" ]
dependencies = [ "openai==2.17", "pdf2image==1.17.0", "pillow==12.1", "pymupdf>=1.23.0", "python-dotenv==1.2.1" ]

scripts.ocr-extractor = "receipt_ocr.cli:main"

[dependency-groups]
dev = [ "codecov", "coverage", "pillow", "pytest", "pytest-cov" ]

[tool.hatch.build.targets.wheel]
packages = [ "src/receipt_ocr" ]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/receipt_ocr/__about__.py"
pattern = "__version__ = \"(?P<version>.+)\""

[tool.pytest.ini_options]
pythonpath = [ "src" ]
